--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,6 @@
 #LoggedIn {
   border: 4px solid black;
   padding: 20px 20px 20px 20px;
-  height: 500px;
   width: 900px;
 
 }
@@ -78,3 +77,29 @@
 #DashBord {
   padding: 10px 10px 10px 10px;
 }
+
+#UserREAD {
+  padding: 30px 10px 20px 10px;
+}
+
+#UserREAD button{
+  font-size: 18px;
+}
+
+#UserREAD textarea {
+  background-color: #252525;
+  color: limegreen;
+  padding: 5px 5px 5px 5px;
+}
+
+#UserREAD input{
+  background-color: #252525;
+  color: limegreen;
+  padding: 5px 5px 5px 5px;
+}
+
+
+#aboutme {
+  border: 2px solid black;
+}
+
