--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
   color: white;
 }
 
@@ -46,14 +46,23 @@
 
 }
 
-#DashBord button {
-  font-size: 24px;
+#DashBord {
+  padding: 30px 0px 20px 0px;
 }
 
+#DashBord button {
+  font-size: 28px;
+}
+
+#DashBord button:hover {
+  background-color: #252525;
+  color: limegreen;
+  border-color: limegreen;
+}
 
 #logoutDiv {
 
-  padding: 20px 20px 20px 20px;
+  padding: 20px 20px 50px 20px;
   font-size: 18px;
   width: 150px;
   height: 80px;
@@ -81,6 +90,17 @@
 #DashBord {
   padding: 10px 10px 10px 10px;
 }
+
+
+
+#MakePost textarea{
+  background-color: #252525;
+  color: limegreen;
+  font-size: 20px;
+  padding: 10px 10px 10px 10px;
+}
+
+
 
 #UserREAD {
   padding: 30px 10px 20px 10px;
