--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,6 +66,9 @@
 
 }
 
+#NotLoggedIn .col button {
+  font-size: 28px;
+}
 
 #LoginC {
   padding: 40px 20px 20px 20px;
@@ -155,4 +158,7 @@
 
 #AllUserPost .col-md-4 button {
   font-size: 10px;
+  color: red;
+  font-weight: bold;
+  background-color: White;
 }
