--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,6 @@
 }
 
 
-
-
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -136,7 +133,7 @@
 }
 
 #AllUserPost .col-md-4 {
-  height: 200px;
+  height: auto;
 
   padding: 10px 10px 10px 10px;
   border: 2px solid silver;
@@ -152,7 +149,8 @@
 }
 
 #AllUserPost .col-md-4 p {
-  font-size: 18px;
+  width: auto;
+  height: 150px;
   color: limegreen;
 }
 
@@ -161,4 +159,10 @@
   color: red;
   font-weight: bold;
   background-color: White;
+
+}
+
+#AllUserPost .col-md-4 .Butt {
+  padding: 20px 10px 10px 10px;
+  
 }
